2004-01-17  Bruno Haible  <bruno@clisp.org>

	* hello-*/po/Makefile.am: Adapt to changes made in po/Makefile.in.in.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* po/af.po: New file, from Ysbeer <ysbeer@af.org.za>.
	* po/ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
	* po/de.po: Update from Karl Eichwalder <ke@gnu.franken.de>.
	* po/fr.po: Update from Michel Robitaille <robitail@iro.umontreal.ca>.
	* po/ja.po: Update from Masahito Yamaga <ma@yama-ga.com>.
	* po/nl.po: New file, from Elros Cyriatan <cyriatan@fastmail.fm>.
	* po/pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
	* po/sk.po: New file, from Marcel Telka <marcel@telka.sk>.
	* po/sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.
	* po/zh_CN.po: Update from Funda Wang <fundawang@linux.net.cn>.
	* po/LINGUAS: Add af, nl, sk.
	* hello-*/po/LINGUAS: Update.
	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-c++-kde/admin: New directory, from KDE 3.1.4.
	* hello-c++-kde/auto*.sh: Don't create/remove the contents of the
	admin subdirectory.
	* Makefile.am (EXAMPLESFILES): Add hello-c++-kde/admin/*.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-c/*, hello-c-gnome/*, hello-objc/*, hello-objc-gnome/*,
	hello-c++/*, hello-c++-gnome/*, hello-c++-kde/*: Use the autoconf
	infrastructure from gettext-0.13.1, not 0.12.1.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* hello-csharp/hello.cs: Work around mono-0.29 CurrentUICulture bug.
	* hello-csharp-forms/hello.cs: Likewise.

2003-12-29  Bruno Haible  <bruno@clisp.org>

	* hello-perl/INSTALL: Mention that libintl-perl-1.09 required.
	* hello-perl/hello-1.pl.in, hello-perl/hello-2.pl.in: Inhibit the
	automatic UTF-8 conversion in UTF-8 locales with Perl-5.8.0. Thanks to
	Guido Flohr.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	* hello-csharp: New subdirectory.
	* hello-csharp-forms: New subdirectory.
	* Makefile.am (EXAMPLESFILES): Add the files in hello-csharp and